Fix HTML typo in template.

--- a/blog/templates/entry.mustache
+++ b/blog/templates/entry.mustache
@@ -14,7 +14,7 @@
 {{#entry.categories?}}
 | Categories:
 {{#entry.categories}}
-  <a href="{{url}}">{{name}}<a> 
+  <a href="{{url}}">{{name}}</a>
 {{/entry.categories}}
 {{/entry.categories?}}
 </div>
