Fix permalink in entry template.

--- a/blog/templates/entry.mustache
+++ b/blog/templates/entry.mustache
@@ -9,7 +9,7 @@
 
 <div class="posted">
 {{#cfg.permalink}}
-<a class="link" title="Article's permanent link" href="{{cfg.archive}}/{{entry.permalink}}">Permanent link</a>
+<a class="link" title="Article's permanent link" href="{{cfg.url}}/archive/{{entry.permalink}}">Permanent link</a>
 {{/cfg.permalink}}
 {{#entry.categories?}}
 | Categories:
