--- a/blog/templates/category-archive.mustache
+++ b/blog/templates/category-archive.mustache
@@ -3,8 +3,8 @@
 <!-- HEAD -->
 <head>
 <title>{{&cfg.title}}</title>
-<link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" />
-<!-- TODO: RSS and Atom links -->
+<link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" /><
+<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{cfg.url}}{{feed}}" />
 </head>
 <!-- BODY -->
 <body>
