--- a/blog/templates/permalink.mustache
+++ b/blog/templates/permalink.mustache
@@ -1,4 +1,4 @@
-<?DOCTYPE html>
+<!DOCTYPE html>
 <html lang="{{cfg.lang}}">
 <!-- HEAD -->
 <head>
@@ -6,7 +6,7 @@
 <meta name="robots" content="all" />
 <meta name="revisit-after" content="31 days" />
 <link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" />
-<!-- TODO: RSS and Atom links -->
+<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{cfg.url}}{{feed}}" />
 </head>
 <!-- BODY -->
 <body>
