--- a/blog/templates/category-archive.mustache
+++ b/blog/templates/category-archive.mustache
@@ -4,7 +4,7 @@
 <head>
 <title>{{&cfg.title}}</title>
 <link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" /><
-<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{cfg.url}}{{feed}}" />
+<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{feed}}" />
 </head>
 <!-- BODY -->
 <body>
