--- a/blog/templates/permalink.mustache
+++ b/blog/templates/permalink.mustache
@@ -6,7 +6,7 @@
 <meta name="robots" content="all" />
 <meta name="revisit-after" content="31 days" />
 <link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" />
-<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{cfg.url}}{{feed}}" />
+<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{feed}}" />
 </head>
 <!-- BODY -->
 <body>
