Fix and improve templates.

--- a/blog/templates/entry.mustache
+++ b/blog/templates/entry.mustache
@@ -10,7 +10,7 @@
 <div class="posted">
 Author: {{entry.AUTHOR}} |
 {{#cfg.permalink}}
-<a class="link" title="Article's permanent link" href="{{cfg.url}}/archive/{{entry.permalink}}">Permanent link</a>
+<a class="link" title="Article's permanent link" href="{{entry.permalink}}">Permanent link</a>
 {{/cfg.permalink}}
 {{#entry.categories?}}
 | Categories:
