--- a/blog/templates/atom.mustache
+++ b/blog/templates/atom.mustache
@@ -2,7 +2,7 @@
 <feed xmlns="http://www.w3.org/2005/Atom" xmlns:dc="http://purl.org/dc/elements/1.1/">
 <title type="html">{{cfg.title}}</title>
 <link rel="alternate" type="text/html" href="{{cfg.url}}" />
-<link rel="self" type="application/atom+xml" href="{{cfg.url}}{{self-url}}" />>
+<link rel="self" type="application/atom+xml" href="{{self-url}}" />>
 <updated>{{lastmodified}}</updated>
 <id>{{cfg.url}}</id>
 <author>
@@ -14,8 +14,8 @@
 <author>
 <name>{{AUTHOR}}</name>
 </author>
-<link rel="alternate" type="text/html" href="{{cfg.url}}/archive/{{permalink}}" />
-<id>{{cfg.url}}/archive/{{permalink}}</id>
+<link rel="alternate" type="text/html" href="{{permalink}}" />
+<id>{{permalink}}</id>
 <published>{{ts}}</published>
 <updated>{{ts}}</updated>
 <dc:subject>{{categories2}}</dc:subject>
