--- a/blog/templates/category-archive.mustache
+++ b/blog/templates/category-archive.mustache
@@ -2,9 +2,9 @@
 <html lang="{{cfg.lang}}">
 <!-- HEAD -->
 <head>
-<title>{{&cfg.title}}</title>
+<title>Category {{cat.name}} : {{&cfg.title}}</title>
 <link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" /><
-<link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{feed}}" />
+<link rel="alternate" type="application/atom+xml" title="Atom feed for category {{cat.name}}" href="{{feed}}" />
 </head>
 <!-- BODY -->
 <body>
