Fix months, add contacts and links.

--- a/blog/templates/main-index.mustache
+++ b/blog/templates/main-index.mustache
@@ -37,14 +37,14 @@ $NB_Calendar
 $NB_ArticleLinks
 </div>
 
+-->
 <div class="sidetitle">
 Ссылки
 </div>
 
 <div class="side">
-$NB_MainLinks
+{{&links}}
 </div>
--->
 
 <div class="sidetitle">
 Categories
@@ -70,7 +70,7 @@ Syndicate this site: <a href="{{feed}}">Atom</a>
 </div>
 
 <div class="side">
-$BLOG_CONTACT
+{{&contacts}}
 </div>
 
 <div class="sidetitle">
