--- a/blog/templates/main-index.mustache
+++ b/blog/templates/main-index.mustache
@@ -33,11 +33,15 @@
 $NB_Calendar
 </div>
 
-<div class="side">
-$NB_ArticleLinks
+-->
+<div class="sidetitle">
+Articles
 </div>
 
--->
+<div class="side">
+{{&articles}}
+</div>
+
 <div class="sidetitle">
 Ссылки
 </div>
