--- a/blog/templates/main-index.mustache
+++ b/blog/templates/main-index.mustache
@@ -43,7 +43,7 @@ Articles
 </div>
 
 <div class="sidetitle">
-Ссылки
+Links
 </div>
 
 <div class="side">
@@ -70,7 +70,7 @@ Syndicate this site: <a href="{{feed}}">Atom</a>
 </div>
 
 <div class="sidetitle">
-Контактная информация
+Contact information
 </div>
 
 <div class="side">
@@ -78,7 +78,7 @@ Syndicate this site: <a href="{{feed}}">Atom</a>
 </div>
 
 <div class="sidetitle">
-Статистика
+Statistics
 </div>
 
 <div class="side">
