Squashed commit of the following:
commit fe36ef85711f84074b3b5bea29ccf832a58438b9
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 22:56:09 2013 +0700

    Fix calendar table tag.

commit 544e7f4c975e51be0f7698e7ba278458f229c55f
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 22:55:52 2013 +0700

    Main page calendar.

commit 9e358ef225466a9bc44f7383cd350be9d23f980a
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 22:48:40 2013 +0700

    month function calculates calendar too.

commit d2a099140fc047eac1977b14a13db56cc01ef264
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 22:26:05 2013 +0700

    Style for calendar cells.

commit 0ef8269a47d33f1699e45865b513ffadad4083c0
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 22:25:46 2013 +0700

    Do not paginate month archive.

commit 4c022a9e1e6a50d409a558c53aaa29fb6c36ea27
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 18:55:16 2013 +0700

    Calendar for month archive.

    TODO: pagination.

commit 8e135d82f607d2327469e1fd2cbccda35923103b
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Mon Jul 8 11:26:18 2013 +0700

    Refactor map-vals and rename it to fmap.

commit b72505add6fe93f679809c44ad5e3d7328390618
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Sun Jul 7 23:52:30 2013 +0700

    Fix formatting.

commit 3f31041269be407b6822e01a16cee2bb39634012
Author: Ivan Boldyrev <lispnik@gmail.com>
Date:   Sun Jul 7 23:52:12 2013 +0700

    Basic version of month calendar.

--- a/blog/templates/main-index.mustache
+++ b/blog/templates/main-index.mustache
@@ -28,12 +28,10 @@
 
 <div id="links">
 
-<!--
 <div class="calendar">
-$NB_Calendar
+{{&calendar}}
 </div>
 
--->
 <div class="sidetitle">
 Articles
 </div>
