--- a/blog/templates/month-archive.mustache
+++ b/blog/templates/month-archive.mustache
@@ -13,18 +13,19 @@
 <span class="description">{{&cfg.description}}</span>
 </div>
 
-<div id="container">
+<div id="content">
 <div class="blog">
  <div id="menu" class="menu">
-   <a href="{{cfg.url}}">Main page</a><br />
-   {{&tab}}
+   <a href="{{cfg.url}}">Main page</a>
  </div>
  {{&body}}
- <div id="bottommenu" class="menu">
-   {{&tab}}
- </div>
 </div>
 </div>
+
+<div id="links">
+ <div class="calendar">{{&calendar}}</div>
+</div>
+
 
 </body>
 </html>
