Fix main pages's content id.

--- a/blog/templates/main-index.mustache
+++ b/blog/templates/main-index.mustache
@@ -13,7 +13,7 @@
 <span class="description">{{&cfg.description}}</span>
 </div>
 
-<div id="container">
+<div id="content">
 <div class="blog">
  <div id="menu" class="menu">
    <a href="{{cfg.url}}">Main page</a><br />
