Fix HTML code in category and month templates.

--- a/blog/templates/category-archive.mustache
+++ b/blog/templates/category-archive.mustache
@@ -3,7 +3,7 @@
 <!-- HEAD -->
 <head>
 <title>Category {{cat.name}} : {{&cfg.title}}</title>
-<link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" /><
+<link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" />
 <link rel="alternate" type="application/atom+xml" title="Atom feed for category {{cat.name}}" href="{{feed}}" />
 </head>
 <!-- BODY -->
