--- a/blog/templates/month-archive.mustache
+++ b/blog/templates/month-archive.mustache
@@ -3,7 +3,7 @@
 <!-- HEAD -->
 <head>
 <title>{{month}} Archive : {{&cfg.title}}</title>
-<link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" /><
+<link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" />
 <link rel="alternate" type="application/atom+xml" title="Atom feed" href="{{feed}}" />
 </head>
 <!-- BODY -->
