--- a/blog/templates/makepage.mustache
+++ b/blog/templates/makepage.mustache
@@ -19,7 +19,9 @@
    <a href="{{cfg.url}}">Main page</a><br />
  </div>
  <div class="blogbody">
+   {{#title?}}
    <h3 class="title">{{&title}}</h3>
+   {{/title?}}
  {{&body}}
  </div>
 </div>
