Articles' HTML id starts with 'e' for nb compatibility.

--- a/blog/templates/entry.mustache
+++ b/blog/templates/entry.mustache
@@ -1,4 +1,4 @@
-<div class="item" id="{{entry.ID}}">
+<div class="item" id="{{entry.hid}}">
 <h2 class="date">{{entry.DATE}}</h2>
 <div class="blogbody">
 <h3 class="title">{{&entry.TITLE}}</h3>
