--- a/blog/templates/permalink-entry.mustache
+++ b/blog/templates/permalink-entry.mustache
@@ -1,6 +1,6 @@
 <h2 class="date">{{entry.DATE}}</h2>
 <div class="blogbody">
-<h3 class="title" id="{{entry.ID}}">{{&entry.TITLE}}</h3>
+<h3 class="title" id="{{entry.hid}}">{{&entry.TITLE}}</h3>
 {{&entry.BODY}}
 </div>
 <div class="posted">
