--- a/blog/templates/atom.mustache
+++ b/blog/templates/atom.mustache
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="{{cfg.encoding}}"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xmlns:dc="http://purl.org/dc/elements/1.1/">
 <title type="html">{{cfg.title}}</title>
 <link rel="alternate" type="text/html" href="{{cfg.url}}" />
