--- a/blog/templates/category-archive.mustache
+++ b/blog/templates/category-archive.mustache
@@ -2,6 +2,7 @@
 <html lang="{{cfg.lang}}">
 <!-- HEAD -->
 <head>
+<meta http-equiv="Content-type" content="text/html; charset={{cfg.encoding}}" />
 <title>Category {{cat.name}} : {{&cfg.title}}</title>
 <link rel="stylesheet" href="{{cfg.url}}/{{cfg.style}}" type="text/css" />
 <link rel="alternate" type="application/atom+xml" title="Atom feed for category {{cat.name}}" href="{{feed}}" />
