--- a/blog/templates/permalink.mustache
+++ b/blog/templates/permalink.mustache
@@ -2,6 +2,7 @@
 <html lang="{{cfg.lang}}">
 <!-- HEAD -->
 <head>
+<meta http-equiv="Content-type" content="text/html; charset={{cfg.encoding}}" />
 <title>{{&title}} &mdash; {{&cfg.title}}</title>
 <meta name="robots" content="all" />
 <meta name="revisit-after" content="31 days" />
